--- a/dissertation.ipynb
+++ b/dissertation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,12 @@
     "import numpy as np \n",
     "import os\n",
     "from handle_dataset.transform import create_df_with_datetimes\n",
-    "from ml_models.lightgbm import lightgbm"
+    "from ml_models.lightgbm import lightgbm\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,70 +52,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loading just the first timeseries \n",
     "first_timeseries_train = create_df_with_datetimes(train_df, 0)\n",
     "first_timeseries_test = create_df_with_datetimes(test_df, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1     5172.1\n",
-       "2     5133.5\n",
-       "3     5186.9\n",
-       "4     5084.6\n",
-       "5     5182.0\n",
-       "6     5414.3\n",
-       "7     5576.2\n",
-       "8     5752.9\n",
-       "9     5955.2\n",
-       "10    6087.8\n",
-       "11    6238.9\n",
-       "12    6317.2\n",
-       "13    6262.7\n",
-       "14    6361.0\n",
-       "15    6427.4\n",
-       "16    6654.9\n",
-       "17    6835.4\n",
-       "18    6925.5\n",
-       "19    7073.5\n",
-       "20    7144.0\n",
-       "21    7230.6\n",
-       "22    7349.6\n",
-       "23    7339.2\n",
-       "24    7250.8\n",
-       "25    7294.6\n",
-       "26    7393.9\n",
-       "27    7560.9\n",
-       "28    7651.4\n",
-       "29    7587.3\n",
-       "30    7530.5\n",
-       "31    7261.1\n",
-       "Name: target, dtype: float64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/george/.local/lib/python3.8/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: An unsupported index was provided and will be ignored when e.g. forecasting.\n",
+      "  self._init_dates(dates, freq)\n",
+      "/home/george/.local/lib/python3.8/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: An unsupported index was provided and will be ignored when e.g. forecasting.\n",
+      "  self._init_dates(dates, freq)\n",
+      "/home/george/.local/lib/python3.8/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: An unsupported index was provided and will be ignored when e.g. forecasting.\n",
+      "  self._init_dates(dates, freq)\n",
+      "/home/george/.local/lib/python3.8/site-packages/statsmodels/tsa/base/tsa_model.py:836: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
+      "  return get_prediction_index(\n",
+      "/home/george/.local/lib/python3.8/site-packages/statsmodels/tsa/base/tsa_model.py:836: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
+      "  return get_prediction_index(\n"
+     ]
     }
    ],
-   "source": [
-    "first_timeseries_train['target'].astype(float)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#Traditional models\n",
     "from traditional_models.arima import arima_model\n",
@@ -127,40 +94,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/george/.local/lib/python3.8/site-packages/prophet/forecaster.py:1124: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  self.history_dates = pd.to_datetime(pd.Series(df['ds'].unique(), name='ds')).sort_values()\n",
+      "/home/george/.local/lib/python3.8/site-packages/prophet/forecaster.py:271: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df['ds'] = pd.to_datetime(df['ds'])\n",
+      "19:01:27 - cmdstanpy - INFO - Chain [1] start processing\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "19:01:27 - cmdstanpy - INFO - Chain [1] done processing\n"
+     ]
+    }
+   ],
    "source": [
     "#Machine Learning models\n",
+    "from ml_models.prophet_model import prophet_model\n",
     "\n",
-    "for counter in range(3):\n",
-    "    timeseries_df = create_df_with_datetimes(train_df, counter)\n",
-    "    lightgbm(timeseries_df)"
+    "#LightGBM\n",
+    "# for counter in range(3):\n",
+    "#     timeseries_df = create_df_with_datetimes(train_df, counter)\n",
+    "#     lightgbm(timeseries_df)\n",
+    "\n",
+    "# Prophet\n",
+    "prophet_forecasts = prophet_model(train=first_timeseries_train, test=first_timeseries_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No outliers detected.\n",
-      "No outliers detected.\n",
       "Grubbs score for arima is : 0\n",
       "SMAPE score for arima is : 9.64446964462614\n",
       "MAPE score for arima is : 9.121537475242345\n",
       "Shape similarity score for arima is : 4178.792879752498\n",
       "===================================================================================\n",
-      "No outliers detected.\n",
-      "No outliers detected.\n",
       "Grubbs score for theta is : 0\n",
       "SMAPE score for theta is : 40.00131259796595\n",
       "MAPE score for theta is : 33.29745638084341\n",
       "Shape similarity score for theta is : 15127.100000000006\n",
-      "===================================================================================\n"
+      "===================================================================================\n",
+      "Grubbs score for prophet is : 0\n",
+      "SMAPE score for prophet is : 1.9794528840151553\n",
+      "MAPE score for prophet is : 2.0084528351210076\n",
+      "Shape similarity score for prophet is : 780.8762437136947\n",
+      "===================================================================================\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Model\t\t|\tMAPE\t|\tsMAPE\t|\tGrubbs\t|\tShape similarity\t|\n",
+      "--------------------------------------------------------------------------------------------------\n",
+      "arima\t\t|\t9.12\t|\t9.64\t|\t0\t|\t4179\t\t\t|\n",
+      "--------------------------------------------------------------------------------------------------\n",
+      "theta\t\t|\t33.3\t|\t40.0\t|\t0\t|\t15127\t\t\t|\n",
+      "--------------------------------------------------------------------------------------------------\n",
+      "prophet\t\t|\t2.01\t|\t1.98\t|\t0\t|\t781\t\t\t|\n",
+      "--------------------------------------------------------------------------------------------------\n",
+      "\n"
      ]
     }
    ],
@@ -169,9 +174,13 @@
     "\n",
     "alpha = 0.05\n",
     "predicted_dictionary = {\"arima\": arima_forecasts,\n",
-    "                        \"theta\": theta_forecasts}\n",
+    "                        \"theta\": theta_forecasts,\n",
+    "                        \"prophet\": prophet_forecasts}\n",
     "\n",
-    "real = first_timeseries_test['target']\n",
+    "\n",
+    "# For some reason the column names change to ds and y and cannot change back....\n",
+    "real = first_timeseries_test['y']\n",
+    "\n",
     "for key in predicted_dictionary:\n",
     "    predicted = predicted_dictionary[key]\n",
     "    grubbs_test_score = grubbs_score(predicted, real, alpha)\n",
@@ -183,7 +192,35 @@
     "    print(f\"SMAPE score for {key} is : {smape_score}\")\n",
     "    print(f\"MAPE score for {key} is : {mape_score}\")\n",
     "    print(f\"Shape similarity score for {key} is : {shape_similarity_score}\")\n",
-    "    print(\"===================================================================================\")"
+    "    print(\"===================================================================================\")\n",
+    "\n",
+    "print('\\n')\n",
+    "print('\\n')\n",
+    "\n",
+    "# Printing the new string:\n",
+    "scores_dict = {\n",
+    "    'arima': [],\n",
+    "    'theta': [],\n",
+    "    'prophet': []\n",
+    "}\n",
+    "\n",
+    "for key in predicted_dictionary:\n",
+    "    predicted = predicted_dictionary[key]\n",
+    "    grubbs_test_score = grubbs_score(predicted, real, alpha)\n",
+    "    smape_score = smape(real.tolist(), predicted.tolist())\n",
+    "    shape_similarity_score = dtw(predicted, real)\n",
+    "    mape_score = mape(real.tolist(), predicted.tolist())\n",
+    "\n",
+    "    # MAPE | sMAPE | Grubbs | tShape similarity\n",
+    "    scores_dict[key].append(round(mape_score,2))\n",
+    "    scores_dict[key].append(round(smape_score,2))\n",
+    "    scores_dict[key].append(round(grubbs_test_score))\n",
+    "    scores_dict[key].append(round(shape_similarity_score))\n",
+    "\n",
+    "from evaluation_protocol.evaluation_protocol_string import eval_string\n",
+    "\n",
+    "evaluation_string = eval_string(scores_dict)\n",
+    "print(evaluation_string)"
    ]
   },
   {
