to change branch

--- a/dissertation.ipynb
+++ b/dissertation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -105,14 +105,8 @@
       "  self.history_dates = pd.to_datetime(pd.Series(df['ds'].unique(), name='ds')).sort_values()\n",
       "/home/george/.local/lib/python3.8/site-packages/prophet/forecaster.py:271: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  df['ds'] = pd.to_datetime(df['ds'])\n",
-      "19:01:27 - cmdstanpy - INFO - Chain [1] start processing\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "19:01:27 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "19:07:15 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "19:07:16 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     }
    ],
@@ -131,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -184,9 +178,9 @@
     "for key in predicted_dictionary:\n",
     "    predicted = predicted_dictionary[key]\n",
     "    grubbs_test_score = grubbs_score(predicted, real, alpha)\n",
-    "    smape_score = smape(real.tolist(), predicted.tolist())\n",
+    "    smape_score = smape(real, predicted)\n",
     "    shape_similarity_score = dtw(predicted, real)\n",
-    "    mape_score = mape(real.tolist(), predicted.tolist())\n",
+    "    mape_score = mape(real, predicted)\n",
     "\n",
     "    print(f\"Grubbs score for {key} is : {grubbs_test_score}\")\n",
     "    print(f\"SMAPE score for {key} is : {smape_score}\")\n",
@@ -207,9 +201,9 @@
     "for key in predicted_dictionary:\n",
     "    predicted = predicted_dictionary[key]\n",
     "    grubbs_test_score = grubbs_score(predicted, real, alpha)\n",
-    "    smape_score = smape(real.tolist(), predicted.tolist())\n",
+    "    smape_score = smape(real, predicted)\n",
     "    shape_similarity_score = dtw(predicted, real)\n",
-    "    mape_score = mape(real.tolist(), predicted.tolist())\n",
+    "    mape_score = mape(real, predicted)\n",
     "\n",
     "    # MAPE | sMAPE | Grubbs | tShape similarity\n",
     "    scores_dict[key].append(round(mape_score,2))\n",
