--- a/dissertation.ipynb
+++ b/dissertation.ipynb
@@ -31,6 +31,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from naive_methods.last_value import predict_last_value\n",
+    "from naive_methods.only_mean import mean_naive\n",
+    "from naive_methods.random_walk import random_walk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Dataset\n",
     "train_df = pd.read_csv('Dataset/Yearly-train.csv')\n",
     "test_df = pd.read_csv('Dataset/Yearly-test.csv')"
@@ -38,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,64 +63,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading just the first timeseries \n",
-    "first_timeseries_train = create_df_with_datetimes(train_df, 0)\n",
-    "first_timeseries_test = create_df_with_datetimes(test_df, 0)"
+    "first_timeseries_train = create_df_with_datetimes(train_df, 228)\n",
+    "first_timeseries_test = create_df_with_datetimes(test_df, 228)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/george/.local/lib/python3.8/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: An unsupported index was provided and will be ignored when e.g. forecasting.\n",
-      "  self._init_dates(dates, freq)\n",
-      "/home/george/.local/lib/python3.8/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: An unsupported index was provided and will be ignored when e.g. forecasting.\n",
-      "  self._init_dates(dates, freq)\n",
-      "/home/george/.local/lib/python3.8/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: An unsupported index was provided and will be ignored when e.g. forecasting.\n",
-      "  self._init_dates(dates, freq)\n",
-      "/home/george/.local/lib/python3.8/site-packages/statsmodels/tsa/base/tsa_model.py:836: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
-      "  return get_prediction_index(\n",
-      "/home/george/.local/lib/python3.8/site-packages/statsmodels/tsa/base/tsa_model.py:836: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
-      "  return get_prediction_index(\n"
+      "11255.15872\n"
      ]
     }
    ],
    "source": [
-    "#Traditional models\n",
-    "from traditional_models.arima import arima_model\n",
-    "from traditional_models.theta_model import theta_model_forecast\n",
-    "\n",
-    "arima_forecasts = arima_model(series=first_timeseries_train['target'].astype(float), forecast_periods=6)\n",
-    "theta_forecasts = theta_model_forecast(series=first_timeseries_train['target'], h=6)"
+    "# Naive methods\n",
+    "last_value_forecasts = predict_last_value(first_timeseries_train['target'].tolist(), len(first_timeseries_test))\n",
+    "mean_naive_forecasts = mean_naive(first_timeseries_train['target'].tolist(), len(first_timeseries_test))\n",
+    "random_walk_forecasts = random_walk(first_timeseries_train['target'].tolist(), len(first_timeseries_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/george/.local/lib/python3.8/site-packages/prophet/forecaster.py:1124: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  self.history_dates = pd.to_datetime(pd.Series(df['ds'].unique(), name='ds')).sort_values()\n",
-      "/home/george/.local/lib/python3.8/site-packages/prophet/forecaster.py:271: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  df['ds'] = pd.to_datetime(df['ds'])\n",
-      "19:07:15 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "19:07:16 - cmdstanpy - INFO - Chain [1] done processing\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "first_timeseries_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_timeseries_test.to_csv('test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Traditional models\n",
+    "from traditional_models.arima import arima_model\n",
+    "from traditional_models.theta_model import theta_model_forecast\n",
+    "from traditional_models.ets import ets_method\n",
+    "\n",
+    "arima_forecasts = arima_model(series=first_timeseries_train['target'].astype(float), forecast_periods=6)\n",
+    "theta_forecasts = theta_model_forecast(series=first_timeseries_train['target'], h=6)\n",
+    "ets_forecasts_2 = ets_method(train=first_timeseries_train, test=first_timeseries_test, periods=2)\n",
+    "ets_forecasts_6 = ets_method(train=first_timeseries_train, test=first_timeseries_test, periods=6)\n",
+    "ets_forecasts_12 = ets_method(train=first_timeseries_train, test=first_timeseries_test, periods=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#Machine Learning models\n",
     "from ml_models.prophet_model import prophet_model\n",
@@ -125,77 +148,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Grubbs score for arima is : 0\n",
-      "SMAPE score for arima is : 9.64446964462614\n",
-      "MAPE score for arima is : 9.121537475242345\n",
-      "Shape similarity score for arima is : 4178.792879752498\n",
-      "===================================================================================\n",
-      "Grubbs score for theta is : 0\n",
-      "SMAPE score for theta is : 40.00131259796595\n",
-      "MAPE score for theta is : 33.29745638084341\n",
-      "Shape similarity score for theta is : 15127.100000000006\n",
-      "===================================================================================\n",
-      "Grubbs score for prophet is : 0\n",
-      "SMAPE score for prophet is : 1.9794528840151553\n",
-      "MAPE score for prophet is : 2.0084528351210076\n",
-      "Shape similarity score for prophet is : 780.8762437136947\n",
-      "===================================================================================\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Model\t\t|\tMAPE\t|\tsMAPE\t|\tGrubbs\t|\tShape similarity\t|\n",
-      "--------------------------------------------------------------------------------------------------\n",
-      "arima\t\t|\t9.12\t|\t9.64\t|\t0\t|\t4179\t\t\t|\n",
-      "--------------------------------------------------------------------------------------------------\n",
-      "theta\t\t|\t33.3\t|\t40.0\t|\t0\t|\t15127\t\t\t|\n",
-      "--------------------------------------------------------------------------------------------------\n",
-      "prophet\t\t|\t2.01\t|\t1.98\t|\t0\t|\t781\t\t\t|\n",
-      "--------------------------------------------------------------------------------------------------\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Evaluation Protocol\n",
     "\n",
     "alpha = 0.05\n",
     "predicted_dictionary = {\"arima\": arima_forecasts,\n",
     "                        \"theta\": theta_forecasts,\n",
-    "                        \"prophet\": prophet_forecasts}\n",
+    "                        \"prophet\": prophet_forecasts,\n",
+    "                        \"ets_2\": ets_forecasts_2,\n",
+    "                        \"ets_6\": ets_forecasts_6,\n",
+    "                        \"ets_12\": ets_forecasts_12}\n",
     "\n",
     "\n",
     "# For some reason the column names change to ds and y and cannot change back....\n",
     "real = first_timeseries_test['y']\n",
     "\n",
-    "for key in predicted_dictionary:\n",
-    "    predicted = predicted_dictionary[key]\n",
-    "    grubbs_test_score = grubbs_score(predicted, real, alpha)\n",
-    "    smape_score = smape(real, predicted)\n",
-    "    shape_similarity_score = dtw(predicted, real)\n",
-    "    mape_score = mape(real, predicted)\n",
+    "# for key in predicted_dictionary:\n",
+    "#     predicted = predicted_dictionary[key]\n",
+    "#     grubbs_test_score = grubbs_score(predicted, real, alpha)\n",
+    "#     smape_score = smape(real, predicted)\n",
+    "#     shape_similarity_score = dtw(predicted, real)\n",
+    "#     mape_score = mape(real, predicted)\n",
     "\n",
-    "    print(f\"Grubbs score for {key} is : {grubbs_test_score}\")\n",
-    "    print(f\"SMAPE score for {key} is : {smape_score}\")\n",
-    "    print(f\"MAPE score for {key} is : {mape_score}\")\n",
-    "    print(f\"Shape similarity score for {key} is : {shape_similarity_score}\")\n",
-    "    print(\"===================================================================================\")\n",
+    "#     print(f\"Grubbs score for {key} is : {grubbs_test_score}\")\n",
+    "#     print(f\"SMAPE score for {key} is : {smape_score}\")\n",
+    "#     print(f\"MAPE score for {key} is : {mape_score}\")\n",
+    "#     print(f\"Shape similarity score for {key} is : {shape_similarity_score}\")\n",
+    "#     print(\"===================================================================================\")\n",
     "\n",
-    "print('\\n')\n",
-    "print('\\n')\n",
+    "# print('\\n')\n",
+    "# print('\\n')\n",
     "\n",
     "# Printing the new string:\n",
     "scores_dict = {\n",
     "    'arima': [],\n",
     "    'theta': [],\n",
-    "    'prophet': []\n",
+    "    'prophet': [],\n",
+    "    'ets_2': [],\n",
+    "    'ets_6': [],\n",
+    "    'ets_12': []\n",
     "}\n",
     "\n",
     "for key in predicted_dictionary:\n",
