--- a/lstm.ipynb
+++ b/lstm.ipynb
@@ -7,23 +7,24 @@
    "outputs": [],
    "source": [
     "# Code from\n",
-    "# https://machinelearningmastery.com/time-series-prediction-lstm-recurrent-neural-networks-python-keras/"
+    "# https://machinelearningmastery.com/time-series-prediction-lstm-recurrent-neural-networks-python-keras/\n",
+    "# https://towardsdatascience.com/predicting-stock-prices-using-a-keras-lstm-model-4225457f0233\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-08 14:11:22.803902: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-10-08 14:11:22.929100: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-10-08 14:11:22.931287: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-10-09 20:17:56.461912: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-10-09 20:17:56.509160: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-10-09 20:17:56.510376: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-10-08 14:11:25.040370: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "2023-10-09 20:17:57.358089: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
       "/home/george/.local/lib/python3.8/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.3\n",
       "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
      ]
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,22 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "training = training.values\n",
-    "training = training.astype('float32')\n",
-    "# normalize the dataset\n",
-    "scaler = MinMaxScaler(feature_range=(0, 1))\n",
-    "training = scaler.fit_transform(training)\n",
-    "\n",
-    "training_x, training_y = create_dataset(training, look_back)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -559,13 +545,99 @@
        "       [1.        ]], dtype=float32)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "training = pd.read_csv('training.csv', usecols=[1], engine='python')\n",
+    "testing = pd.read_csv('testing.csv', usecols=[1], engine='python')\n",
+    "training = training.values\n",
+    "training = training.astype('float32')\n",
+    "# normalize the dataset\n",
+    "scaler = MinMaxScaler(feature_range=(0, 1))\n",
+    "training = scaler.fit_transform(training)\n",
+    "look_back = 1\n",
+    "training_x, training_y = create_dataset(training, look_back)\n",
+    "\n",
     "training_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.        , 0.88064516, 0.30967742, 0.5258065 , 0.19032258,\n",
+       "       1.        , 0.07096775], dtype=float32)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.08279569],\n",
+       "       [0.        ],\n",
+       "       [0.88064516],\n",
+       "       [0.30967742],\n",
+       "       [0.5258065 ],\n",
+       "       [0.19032258],\n",
+       "       [1.        ],\n",
+       "       [0.07096775],\n",
+       "       [0.22688171]], dtype=float32)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_training = pd.read_csv('training.csv', usecols=[1], engine='python')\n",
+    "new_testing = pd.read_csv('testing.csv', usecols=[1], engine='python')\n",
+    "new_training = new_training.values\n",
+    "new_training = new_training.astype('float32')\n",
+    "scaler = MinMaxScaler(feature_range=(0, 1))\n",
+    "new_training = scaler.fit_transform(new_training)\n",
+    "my_training_x = []\n",
+    "for i in range(len(new_training)):\n",
+    "    a = new_training[i:(i+1), 0]\n",
+    "    my_training_x.append(a)\n",
+    "\n",
+    "np.array(my_training_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert an array of values into a dataset matrix\n",
+    "def create_dataset(dataset, look_back=1):\n",
+    "    dataX, dataY = [], []\n",
+    "    for i in range(len(dataset)-look_back-1):\n",
+    "        a = dataset[i:(i+look_back), 0]\n",
+    "        dataX.append(a)\n",
+    "        dataY.append(dataset[i + look_back, 0])\n",
+    "    return np.array(dataX), np.array(dataY)"
    ]
   },
   {
